working on mobile, issue with content padding

--- a/src/styles/base.styl
+++ b/src/styles/base.styl
@@ -46,9 +46,9 @@ img
 
 .parallaxOne
   background-image url('../images/space_bg.jpg')
-  background-repeat: no-repeat;
-  background-position: center;
-  background-attachment: fixed;
-  background-size: cover;
+  background-repeat: no-repeat
+  background-position: center
+  background-attachment: fixed
+  background-size: cover
   height 120vh
   z-index -10
